# zeicoin-miner

./: README.md
zenrx/: CMakeLists.txt  zenrx.json
zenrx/cmake/: mingw-w64-x86_64.cmake
zenrx/res/: app.rc
zenrx/src/: Api.cpp  Api.h  App.cpp  App.h  Client.cpp  Client.h  Config.cpp  Config.h  CpuInfo.cpp  CpuInfo.h  HexUtils.h  Job.cpp  Job.h  Log.h  Miner.cpp  Miner.h  MoBenchmark.cpp  MoBenchmark.h  Msr.cpp  Msr.h  Platform.h  WinRing0Driver.h  Worker.cpp  Worker.h  main.cpp  version.h
zenrx/src/crypto/: Algorithm.h  Chrono.h  Cpu.h  Profiler.h  RandomX.cpp  RandomX.h  RxInstance.cpp  RxInstance.h  VirtualMemory.h  VirtualMemory_unix.cpp  VirtualMemory_windows.cpp  argon2.h  cpuType.cpp  cpuType.hpp  cpu_flags.c
zenrx/src/crypto/argon2/: CMakeLists.txt
zenrx/src/crypto/argon2/arch/x86_64/lib/: argon2-arch.c  argon2-avx2.c  argon2-avx2.h  argon2-avx512f.c  argon2-avx512f.h  argon2-sse2.c  argon2-sse2.h  argon2-ssse3.c  argon2-ssse3.h  argon2-template-128.h  argon2-xop.c  argon2-xop.h
zenrx/src/crypto/argon2/lib/: argon2-template-64.h  argon2.c  core.c  core.h  encoding.c  encoding.h  impl-select.c
zenrx/src/crypto/argon2/lib/blake2/: blake2.c  blake2.h
zenrx/src/crypto/randomx/: aes_hash.cpp  common.hpp  dataset.cpp  jit_compiler.hpp  jit_compiler_fallback.cpp  jit_compiler_x86.cpp  jit_compiler_x86.hpp  jit_compiler_x86_static.S  randomx.cpp  randomx.h  soft_aes.h  virtual_machine.cpp  virtual_memory.cpp  vm_compiled.cpp  vm_compiled_light.cpp
zenrx_deps/linux/hwloc/: .version
zenrx_deps/linux/hwloc/include/hwloc/autogen/: config.h
zenrx_deps/linux/hwloc/lib/: libhwloc.la
zenrx_deps/linux/hwloc/lib/pkgconfig/: hwloc.pc
zenrx_deps/linux/hwloc/sbin/: hwloc-dump-hwdata
zenrx_deps/linux/hwloc/share/hwloc/: hwloc-dump-hwdata.service
zenrx_deps/linux/hwloc/share/man/man1/: hwloc-annotate.1  hwloc-calc.1  hwloc-dump-hwdata.1  hwloc-gather-cpuid.1  hwloc-gather-topology.1  hwloc-patch.1  hwloc-ps.1
zenrx_deps/linux/hwloc/share/man/man7/: hwloc.7
zenrx_deps/linux/libuv/: .version
zenrx_deps/linux/libuv/lib/: libuv.la
zenrx_deps/linux/libuv/lib/pkgconfig/: libuv.pc
zenrx_deps/linux/openssl/: .version
zenrx_deps/linux/openssl/include/openssl/: configuration.h
zenrx_deps/linux/openssl/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
zenrx_deps/windows/hwloc/: .version
zenrx_deps/windows/hwloc/include/hwloc/autogen/: config.h
zenrx_deps/windows/hwloc/lib/: libhwloc.la
zenrx_deps/windows/hwloc/lib/pkgconfig/: hwloc.pc
zenrx_deps/windows/hwloc/share/man/man1/: hwloc-bind.1  hwloc-compress-dir.1  hwloc-diff.1  hwloc-distrib.1  hwloc-info.1  hwloc-ls.1
zenrx_deps/windows/libuv/: .version
zenrx_deps/windows/libuv/lib/: libuv.la
zenrx_deps/windows/libuv/lib/pkgconfig/: libuv.pc
zenrx_deps/windows/openssl/: .version
zenrx_deps/windows/openssl/include/openssl/: configuration.h
zenrx_deps/windows/openssl/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
